test_datas/compile_fail/type_func_body_not_allowed.pgl
package bad_type_func;

type Bad func(a int) int {
}
